manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: 10.30.10.244/image-build/sample-app:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
