manifests/service-green-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-green-test

spec:
  selector:
    app: sample-app
    slot: green

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

  type: ClusterIP
