manifests/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app-preview
  namespace: rollout

spec:
  selector:
    app: sample-app

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
