manifests/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-preview
  namespace: rollout
spec:
  ingressClassName: nginx
  rules:
  - host: preview-sample-app.exam.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-app-preview
            port:
              number: 80
